--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ plugins {
 	id 'au.com.dius.pact' version '4.0.7'
 	id 'com.adarshr.test-logger' version '2.0.0'
 	id 'org.sonarqube' version '2.8'
+        id 'eclipse'
 }
 
 group = 'application'
